yaml/traefik/animals-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: all-animals
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: animals.traefik
      http:
        paths:
          - path: /bear
            backend:
              serviceName: bear
              servicePort: http
          - path: /moose
            backend:
              serviceName: moose
              servicePort: http
          - path: /hare
            backend:
              serviceName: hare
              servicePort: http
